fix(handlers): handlers working better
